--- a/ERPAnimalia/ERPAnimalia.csproj
+++ b/ERPAnimalia/ERPAnimalia.csproj
@@ -574,6 +574,7 @@
     <Content Include="Scripts\messages\messages.de-de.js" />
     <Content Include="Scripts\messages\messages.fr-fr.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
