--- a/ERPAnimalia/ERPAnimalia.csproj
+++ b/ERPAnimalia/ERPAnimalia.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Controllers\ListProductController.cs" />
     <Compile Include="Controllers\SearchProductController.cs" />
     <Compile Include="Controllers\TransferToFreeProductController.cs" />
+    <Compile Include="Controllers\VoucherController.cs" />
     <Compile Include="DataBase\TransactionBase.cs" />
     <Compile Include="EntityFramework\Animalias.Context.cs">
       <AutoGen>True</AutoGen>
@@ -304,34 +305,39 @@
       <DependentUpon>Animalias.tt</DependentUpon>
     </Compile>
     <Compile Include="Enumeration.cs" />
+    <Compile Include="Factory\VoucherFactory.cs" />
     <Compile Include="Factory\Factory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\ICabeceraComprobante.cs" />
+    <Compile Include="Interfaces\IVoucherHeadManager.cs" />
+    <Compile Include="Interfaces\IDetalleComprobante.cs" />
     <Compile Include="Interfaces\IListProduct.cs" />
     <Compile Include="Mapper\MapperObject.cs" />
     <Compile Include="Mapper\AutoMapperConfig.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\CabeceraComprobanteModel.cs" />
+    <Compile Include="Models\VoucherHeadModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
-    <Compile Include="Models\ClienteManager.cs" />
+    <Compile Include="Models\Manager\ClienteManager.cs" />
     <Compile Include="Models\ClienteModel.cs" />
     <Compile Include="Interfaces\IClinteManager.cs" />
+    <Compile Include="Models\DetalleComprobante.cs" />
     <Compile Include="Models\ListProductManager.cs" />
+    <Compile Include="Models\Manager\VoucheHeadManager.cs" />
     <Compile Include="Models\PersonaModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ListaPrecioModel.cs" />
-    <Compile Include="Models\ManagerListOfAmount.cs" />
+    <Compile Include="Models\Manager\ManagerListOfAmount.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductDetailModel.cs" />
-    <Compile Include="Models\ProductManager.cs" />
+    <Compile Include="Models\Manager\ProductManager.cs" />
     <Compile Include="Models\ProductModels.cs" />
     <Compile Include="EntityFramework\Product.cs">
       <DependentUpon>Animalias.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProductoListaModel.cs" />
     <Compile Include="Models\SortHelper.cs" />
+    <Compile Include="Models\TipoComprobante.cs" />
     <Compile Include="Models\TransferToFreeProductManager.cs" />
     <Compile Include="Models\SubCategoryModel.cs" />
     <Compile Include="Models\TransferToFreeProduct.cs" />
@@ -631,6 +637,8 @@
     <Content Include="Views\TransferToFreeProduct\TransferToFreeProduct.cshtml" />
     <Content Include="Views\Cliente\Cliente.cshtml" />
     <Content Include="Views\Shared\ListProduct.cshtml" />
+    <Content Include="Views\Shared\HeadVoucher.cshtml" />
+    <Content Include="Views\Voucher\Voucher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
