--- a/ERPAnimalia/ERPAnimalia.csproj
+++ b/ERPAnimalia/ERPAnimalia.csproj
@@ -376,6 +376,7 @@
     <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\css\product.css" />
     <Content Include="Content\css\Voucher.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Scripts\bootstrap3.3.7.min.js" />
@@ -667,10 +668,10 @@
     <Content Include="Views\Shared\ListProduct.cshtml" />
     <Content Include="Views\Shared\HeadVoucher.cshtml" />
     <Content Include="Views\Voucher\Voucher.cshtml" />
+    <Content Include="Views\ListProduct\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\ListProduct\" />
     <Folder Include="Views\SearchProduct\" />
   </ItemGroup>
   <ItemGroup>
