--- a/ERPAnimalia/ERPAnimalia.csproj
+++ b/ERPAnimalia/ERPAnimalia.csproj
@@ -683,6 +683,9 @@
   <ItemGroup>
     <Content Include="Scripts\1.3.1-js-gijgo.js" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\code.gijgo.com-1.3.1-js-js.js" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
